# holovideo-algorithms

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
.travis/: install-cuda-trusty.sh
clouds/: circle.pcd  cross.pcd
etc/: xorg.conf
etc/genlockfix/: 4
models/: Face.raw  HVlinesCompare.tif  SkrumpBody.raw  SkrumpEyes.raw  SkrumpPupils.raw  blackFrame.xml  blankFrame.xml  blankdiamond.xml  blocktex.tiff  bones.xml  brain.xml  bullseye.tif  chirp.xml  chirp256.tif  chirpcube.xml  chirpdiag.xml  chirpdiag256.tif  chirpdiag256blur.tif  chirpdiagblur.xml  chirpmono256.tif  crazygrid.tif  cube-bullseye.xml  cube-leaf.xml  cube-lincolnface.xml  cube-linesbullseye.xml  cube-numbergridBold.xml  cube-pattern.xml  cube-scanlineorder.xml  cube-vertstripes.xml  cubetex.tiff  cubetex2-chirptex.tif  cubetex2-chirptex.tiff  cubetex2-diag.xml  cubetex2-grayramp.tif  deathstar.raw  deathstar.xml  diagLinesFiveDegreesMed.tif  diagLinesFiveDegreesThin.tif  diagonal.xml  diagonal256.tif  (+105 more)
models/Jeanne/models/: Carousel_base_lower.tri.sep  Carousel_coiled_column.tri.sep  Column_balls_a.tri.sep  Column_balls_b.tri.sep  Green_rabbit.tri.sep  Green_rabbit_eyes.tri.sep  Green_swan_beak.tri.sep  Pink_swan_beak.tri.sep  tpot.tri.sep
models/Jeanne/textures/: blkmarble.tif  grablkwt.tif  lines.tif  marble01.tif  shadow.tiff  tire.tif
models/civic/: civic_doors.tri.sep  civic_doors2.tri.sep  civic_headlites.tri.sep
models/hondajvx/: jvx_bod1.tri.sep  jvx_dash.tri.sep  jvx_floor.tri.sep  jvx_headlights.tri.sep  jvx_rims.tri.sep  jvx_seat2.tri.sep  jvx_tire.tri.sep  jvx_top.tri.sep  jvxf3.cfg  shadow.tcd
models/letters/: A.psd  A.tif  B.tif  C.tif  D.tif  E.tif  SLOAN.psd
models/letters/SLOAN/: C.tif  C.xml  D.tif  D.xml  H.tif  H.xml  K.tif  K.xml  N.tif  O.tif  O.xml  R.tif  R.xml  READY.tif  S.tif  (+7 more)
models/textures/: bluegrnt.tif  ground.tiff  top.tif
models/trex/: Box_uvm.raw  Box_uvm_conv.raw  Box_uvm_conv.tcd  Trexrun1.xml  Trexrun2.xml  box_map.tiff  box_map2.tiff  cube_map.tif  cube_map2.tif  cube_uvm.raw  cube_uvm.tcd  cubemorph.xml  exp_Box_uvm.tcd  exp_Box_uvm2.tcd  exp_Box_uvm3.tcd  exp_Box_uvm4.tcd  ground.tcd  ground_map_uvm.tif  ground_uvm.raw  ground_uvm.tcd  h  oneBox (copy).xml  oneTrex.xml  palm_map.tif  palm_uvm.raw  palm_uvm.tcd  pyramid_map.tif  pyramid_uvm.raw  pyramid_uvm.tcd  runTrex.xml  singleTrex.xml  trex_walk_1a.raw  trex_walk_1a_conv.raw  trex_walk_1a_conv.tcd  trex_walk_1a_map.tif  trex_walk_2b.raw  trex_walk_2b_conv.raw  trex_walk_2b_conv.tcd  trex_walk_2b_map.tif  trex_walk_3a.raw  (+19 more)
models/tri/: Carousel_base_upper.tri.sep  Carousel_top_lower.tri.sep  Carousel_top_upper.tri.sep  Green_frog.tri.sep  Green_swan.tri.sep  Green_swan_eyes.tri.sep  Pink_frog.tri.sep  Pink_frog_pupils.tri.sep  Pink_frog_whites.tri.sep  Pink_rabbit.tri.sep  Pink_rabbit_eyes.tri.sep  Pink_swan.tri.sep  Spheres.tri.sep
remote/: CMakeLists.txt  JPCLSharedmemAdaptor.cpp  JPCLSharedmemAdaptor.h  JVRPNClient.cpp  JVRPNClient.h  RemoteQT.cpp  RemoteQT.h  RemoteQT.ui  main.cpp  uploader.cu
remote/scripts/: CMakeLists.txt  nvidia-framelock-disable.sh  nvidia-framelock-enable.sh
render_algorithms/: CMakeLists.txt
render_algorithms/dscp4/: AUTHORS  CMakeLists.txt  LICENSE  Makefile  README  README.md  configure  dscp4.conf.in
render_algorithms/dscp4/CMake/: FindGLM.cmake  FindLog4Cxx.cmake  FindSDL.cmake  FindSDL2.cmake  Findassimp.cmake
render_algorithms/dscp4/dscp4/: CMakeLists.txt  DSCP4ProgOptions.cpp  DSCP4ProgOptions.hpp  main.cpp
render_algorithms/dscp4/dscp4-qt/: .gitignore  AppIcon.icns  CMakeLists.txt
render_algorithms/dscp4/dscp4-qt/res/: dscp4-qt-icon.xpm  dscp4-qt.desktop.in
render_algorithms/dscp4/dscp4-qt/src/: QDSCP4Settings.cc  QDSCP4Settings.h  QLogAppender.cc  QLogAppender.h  main.cc  mainwindow.cc  mainwindow.h
render_algorithms/dscp4/dscp4-qt/ui/: mainwindow.ui
render_algorithms/dscp4/dscp4/assets/: dscp4-icon.xpm  dscp4.desktop.in
render_algorithms/dscp4/dscp4/models/: bun_zipper_res3.ply  pleo.ply
render_algorithms/dscp4/libdscp4/: CMakeLists.txt  DSCP4Render.cpp  DSCP4Render.hpp  DSCP4Renderer.hpp  GLSLShader.cpp  GLSLShader.h  dscp4.cpp  dscp4.h  dscp4_defs.h  vsShaderLib.h
render_algorithms/dscp4/libdscp4/kernels/: CMakeLists.txt  dscp-fringe-opencl.h  dscp4-fringe-cuda.h  dscp4-fringe-opencl.c  dscp4-fringe-opencl.cpp  dscp4-fringe-opencl.h  dscp4-fringe.cl  dscp4-fringe.cu
render_algorithms/dscp4/libdscp4/shaders/: pointlight.frag
render_algorithms/dscp4/models/: bun_zipper.ply  bun_zipper_res2.ply  bun_zipper_res4.ply  cube-alpha.ply  cube-blue.ply  cube-cyan.ply  cube-gray.ply  cube-green.ply  cube-magenta.ply  cube-red.ply  cube-white.ply  cube-yellow.ply  cube.ply
render_algorithms/fresnel-mkii/: CMakeLists.txt  fresnel-mkii.cu
render_algorithms/holodepth/: CMakeLists.txt
render_algorithms/holodepth/src/: C5E1f_basicNormMap.cg  C5E1v_basicLight.cg  C5E1v_basicLightperFrag.cg  CMakeLists.txt  Holof_myTextures.cg  Holof_myTextures.cg.old2  Holov_myTextures.cg  JDisplayState.h  JHolovideoDisplay.cpp  JHolovideoDisplay.h  JSharedMemory.cpp  JSharedMemory.h  JZCameraCloud.cpp  JZCameraCloud.h  cloud_fragment_shader.cg  cloud_vertex_shader.cg  framebufferObject.cpp  framebufferObject.h  glErrorUtil.cpp  glErrorUtil.h  kinect_vertex_shader.cg  main.cpp  multi_kinect_fragment_shader.cg  multi_kinect_vertex_shader.cg  myobj.cpp  myobj.h  mytexture.cpp  mytexture.h  renderbuffer.cpp  shapes.cpp  shapes.h  transforms.cpp  transforms.h
render_algorithms/ripgen-fbo/: CMakeLists.txt
render_algorithms/ripgen-fbo/src/: CMakeLists.txt  HoloSave.cpp  HoloSave.h  JDisplayState.h  JKinectFrame.h  JSceneSlice.cpp  JSceneSlice.h  JSequencer.cpp  JSequencer.h  JSharedMemory.cpp  JSharedMemory.h  RIP.cpp  RIP.h  UI.cpp  UI.h  drawable.h  flyRender.h  framebufferObject.cpp  glErrorUtil.cpp  glErrorUtil.h  holoren.cpp  holoren.h  light.cpp  light.h  main.cpp  material.cpp  material.h  model.cpp  model.h  net.h  netclient.cpp  netdata.cpp  netserver.cpp  object.cpp  object.h  orientation.cpp  orientation.h  parser.cpp  parser.h  primitives.cpp  (+15 more)
(+780 files in other folders)
